# scientific-loop

./: .gitattributes  Dockerfile  README.md  __init__.py  client.py  hf_blog_post.md  models.py  openenv.yaml  paper_corpus.py  pyproject.toml  reward_calculator.py  test_environment.py  test_training.py  train_grpo.ipynb  train_grpo.py
server/: ScientificLoop_environment.py  __init__.py  app.py  execution_engine.py
